tests/ui/parser/transient.stderr
error: `transient` data location is not allowed here
  --> ROOT/tests/ui/parser/transient.sol:LL:CC
   |
LL |     function g(uint256 transient transient) {
   |                        ^^^^^^^^^
   |

error: aborting due to 1 previous error

